# project_ish

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
scripts/: validate_submission.sh
server/: Dockerfile  __init__.py  agent_harness.py  app.py  baselines.py  environment.py  grader.py  policy_agent.py  simulator.py  task_loader.py  ui_service.py
tasks/: hp_500hz_budget.json  lp_10khz_budget.json  lp_1khz_budget.json  lp_2khz_low_cost.json
tests/: test_app.py  test_baselines.py  test_environment.py  test_grader.py  test_inference.py  test_llm_agent.py  test_policy_agent.py  test_simulator.py  test_task_loader.py
ui/: README.md  app.py  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: api_client.ts  app.css  circuit_rl_app.tsx  index.css  main.tsx  ui_helpers.ts  ui_types.ts
ui/src/components/: baselines_card.tsx  chart_card.tsx  controls_panel.tsx  empty_panel.tsx  score_card.tsx  story_card.tsx  telemetry_card.tsx
ui/src/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  label.tsx  progress.tsx  select.tsx  separator.tsx  slider.tsx  table.tsx
